cluster-resources/templates/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
 spec:
  selector:
    istio: ingress # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
      tls:
        httpsRedirect: true # sends 301 redirect for http requests
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - '*'
      tls:
        mode: SIMPLE
        credentialName:  wildcard-iomete-cloud-tls
    - port:
        number: 31400
        name: tcp
        protocol: TCP
      hosts:
      - "*"
